Update README.md with bash scripts to facilitate installation